start for write use-mode app
create a control device so an exe can control the driver

--- a/sys/adfilter/adfilter.vcxproj
+++ b/sys/adfilter/adfilter.vcxproj
@@ -208,7 +208,7 @@
     <FilesToPackage Include="@(Inf->'%(CopyOutput)')" Condition="'@(Inf)'!=''" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="adfilter.c" />
+    <ClCompile Include="dispatch.c" />
     <ClCompile Include="filter.c" />
     <ClCompile Include="driver.c" />
   </ItemGroup>
