rewrite driver more readable
add sys,user and except list
read reg no driver can pause when load

--- a/sys/adfilter/adfilter.vcxproj
+++ b/sys/adfilter/adfilter.vcxproj
@@ -208,9 +208,11 @@
     <FilesToPackage Include="@(Inf->'%(CopyOutput)')" Condition="'@(Inf)'!=''" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="adfilter.c" />
     <ClCompile Include="dispatch.c" />
     <ClCompile Include="filter.c" />
     <ClCompile Include="driver.c" />
+    <ClCompile Include="list.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="adfilter.h" />
