add install and remove support for driver
add new interface function for add/del host

--- a/exe/adfcon/adfcon.vcxproj.filters
+++ b/exe/adfcon/adfcon.vcxproj.filters
@@ -9,9 +9,8 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="res">
+      <UniqueIdentifier>{19a03d41-e6d7-431a-83d1-bbc31a61432c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -26,5 +25,13 @@
     <ClCompile Include="adf.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="install.bat">
+      <Filter>res</Filter>
+    </None>
+    <None Include="remove.bat">
+      <Filter>res</Filter>
+    </None>
   </ItemGroup>
 </Project>
