--- a/exe/adfcon/adfcon.vcxproj
+++ b/exe/adfcon/adfcon.vcxproj
@@ -86,6 +86,10 @@
     <ClCompile Include="adf.c" />
     <ClCompile Include="app.c" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="install.bat" />
+    <None Include="remove.bat" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
