change host list to datagrid
manual call the dispose function at viewmodel

--- a/exe/adfilter/adfilter.csproj
+++ b/exe/adfilter/adfilter.csproj
@@ -81,6 +81,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\HostList.cs" />
     <Compile Include="ViewModel\DriverViewModel.cs" />
     <Compile Include="Model\BaseCommand.cs" />
     <Compile Include="ViewModel\HostViewModel.cs" />
