change configure for x64

--- a/sys/adfilter/adfilter.vcxproj
+++ b/sys/adfilter/adfilter.vcxproj
@@ -186,6 +186,9 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
     <DebuggerFlavor>DbgengKernelDebugger</DebuggerFlavor>
+    <IncludePath>$(SolutionDir)sys/tdi_fw/src;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)x64/Win7Release;$(LibraryPath)</LibraryPath>
+    <TargetName>adfilter64</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Release|x64'">
     <DebuggerFlavor>DbgengKernelDebugger</DebuggerFlavor>
@@ -204,6 +207,17 @@
     </Link>
     <PostBuildEvent>
       <Command>copy "$(OutDir)adfilter.sys" "$(SolutionDir)installer\res\adfilter.sys" /Y</Command>
+    </PostBuildEvent>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+    <Link>
+      <AdditionalDependencies>tdi_fw.lib;tdi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
+    <PostBuildEvent>
+      <Command>copy "$(TargetPath)" "$(SolutionDir)installer\res\$(TargetFileName)" /Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
