--- a/sys/adfilter/adfilter.vcxproj.filters
+++ b/sys/adfilter/adfilter.vcxproj.filters
@@ -26,9 +26,15 @@
     <ClCompile Include="list.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\slre\slre.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="adfilter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\slre\slre.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
